Fix overflow number on main display

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,10 @@ body {
 #main-display {
 	margin: 0.2rem;
 	font-size: 2.4rem;
+	width: 10ch;
+	overflow: hidden;
+	white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 #second-display {
